--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "buildTest": "detox build --configuration ios.sim.debug",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "e2e": "detox test --configuration ios.sim.debug"
