build: 删除android测试文件； components: dropdownContainer

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,8 +140,11 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        testBuildType System.getProperty('testBuildType', 'debug')
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        // debox start
+        // testBuildType System.getProperty('testBuildType', 'debug')
+        // testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        // missingDimensionStrategy 'detox', 'full'
+        // debox end
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
 
         if (isNewArchitectureEnabled()) {
@@ -230,7 +233,9 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            proguardFile "${project(':detox').projectDir}/proguard-rules-app.pro"
+            // debox start
+            // proguardFile "${project(':detox').projectDir}/proguard-rules-app.pro"
+            // debox end
 
 
         }
@@ -254,8 +259,12 @@ android {
 }
 
 dependencies {
-    androidTestImplementation('com.wix:detox:+')
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    // detox start
+    // androidTestImplementation(project(path: ":detox"))
+    // androidTestImplementation('com.wix:detox:+')
+    // implementation 'androidx.appcompat:appcompat:1.1.0'
+    // detox end
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //noinspection GradleDynamicVersion
