--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,9 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 31
         targetSdkVersion = 31
-        kotlinVersion = '1.7.20'
+        // debox start
+        // kotlinVersion = '1.7.20'
+        // debox end
 
         if (System.properties['os.arch'] == "aarch64") {
             // For M1 Users we need to use the NDK 24 which added support for aarch64
@@ -24,7 +26,10 @@ buildscript {
         classpath("com.android.tools.build:gradle:7.2.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:5.0.1")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+        // debox start
+        // classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+        // debox end
+        
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -47,10 +52,12 @@ allprojects {
                 excludeGroup "com.facebook.react"
             }
         }
-        maven { // (4)
-          url("$rootDir/../node_modules/detox/Detox-android")
-        }
         google()
+        // debox start
+        // maven { // (4)
+        //   url("$rootDir/../node_modules/detox/Detox-android")
+        // }
+        // debox end
         maven { url 'https://www.jitpack.io' }
     }
 }
