--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -3,6 +3,13 @@ apply from: file("../node_modules/@react-native-community/cli-platform-android/n
 include ':app'
 includeBuild('../node_modules/react-native-gradle-plugin')
 
+// detox start
+// include ':detox'
+// project(':detox').projectDir = new File(rootProject.projectDir, '../node_modules/detox/android/detox')
+// detox end
+
+
+
 if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
     include(":ReactAndroid")
     project(":ReactAndroid").projectDir = file('../node_modules/react-native/ReactAndroid')
